; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_emit_gload.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_emit_gload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@SAVE = common dso_local global i32 0, align 4
@KIND_ARRAY = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"lea %s+%d(#rip), #rax\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"lea %s(#rip), #rax\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"%s %s+%d(#rip), #rax\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i8*, i32)* @emit_gload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_gload(%struct.TYPE_5__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @SAVE, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @KIND_ARRAY, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %25

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i8*, i8** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 (i8*, i8*, ...) @emit(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %18, i32 %19)
  br label %24

21:                                               ; preds = %14
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 (i8*, i8*, ...) @emit(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %22)
  br label %24

24:                                               ; preds = %21, %17
  br label %34

25:                                               ; preds = %3
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %27 = call i8* @get_load_inst(%struct.TYPE_5__* %26)
  store i8* %27, i8** %7, align 8
  %28 = load i8*, i8** %7, align 8
  %29 = load i8*, i8** %5, align 8
  %30 = load i32, i32* %6, align 4
  %31 = call i32 (i8*, i8*, ...) @emit(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i8* %28, i8* %29, i32 %30)
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %33 = call i32 @maybe_emit_bitshift_load(%struct.TYPE_5__* %32)
  br label %34

34:                                               ; preds = %25, %24
  ret void
}

declare dso_local i32 @emit(i8*, i8*, ...) #1

declare dso_local i8* @get_load_inst(%struct.TYPE_5__*) #1

declare dso_local i32 @maybe_emit_bitshift_load(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
